# pidgin-single-window

./: .gitignore  Makefile.am  configure.ac
src/: single-window.c
